--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
+    "react-bits": "^1.0.5",
     "react-dom": "^19.1.0",
     "sass": "^1.89.2"
   },
